--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,8 @@
 body{
     background-image: url("../../public/background2.jpg");
     display: flex;
-    flex: 0;
-    width: 100%;
-    height: 100%;
     background-size: cover;
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
+    flex-direction: column;
+    align-items: center;
 }
