--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,22 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-    background-image: url("../../public/background2.jpg");
     width: 100%;
     height: 100%;
     display: flex;
     background-size: cover;
     background-repeat: no-repeat;
     flex-direction: column;
-    margin: 0;
 }
 .pages{
-    width: 100vw;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0);
+    justify-content: center;
+    width: 100%;
+    min-height: 100vh;
 }
