--- a/src/styleComponents/footer.css
+++ b/src/styleComponents/footer.css
@@ -3,7 +3,7 @@ footer{
     align-items: flex-end;
     justify-content: center;
     width: 100%;
-    min-height: 200px;
+    min-height: 50vh;
     position: relative;
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ footer{
 .under_waves{
     background-color: #3586ff;
     width: 100%;
-    height: 100px;
+    height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,10 +20,47 @@ footer{
 .wave{
     min-width: 100%;
     height: 129px;
-    top: -29px;
     position: absolute;
-    background-color: red;
     background-image: url("../../public/wave.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 1280px 129px;
+}
+.wave#wave1{
+    opacity: 1;
+    bottom: 40vh;
+    z-index: 1000;
+    animation: waveAnimation 4s linear infinite;
+}
+.wave#wave2{
+    opacity: 0.5;
+    bottom: calc(40vh + 10px);
+    z-index: 999;
+    animation: waveAnimation2 4s linear infinite;
+}
+.wave#wave3{
+    opacity: 0.2;
+    bottom: calc(40vh + 15px);
+    z-index: 1000;
+    animation: waveAnimation 3s linear infinite;
+}
+.wave#wave4{
+    opacity: 0.7;
+    bottom: calc(40vh + 20px);
+    z-index: 999;
+    animation: waveAnimation2 3s linear infinite;
+}
+@keyframes waveAnimation {
+    0%{
+        background-position-x: 1280px;
+    }
+    100%{
+        background-position-x: 0;
+    }
+}
+@keyframes waveAnimation2 {
+    0%{
+        background-position-x: 0;
+    }
+    100%{
+        background-position-x: 1280px;
+    }
 }
