--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,10 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
-    background-size: cover;
-    background-repeat: no-repeat;
     flex-direction: column;
 }
 .pages{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
