--- a/src/styleComponents/particles.css
+++ b/src/styleComponents/particles.css
@@ -4,24 +4,24 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgb(2,20,75);
+    background: rgb(20,20,20);
     overflow: hidden;
-    justify-content: center;
-    align-content: center;
+    flex-wrap: wrap;
 }
 .particlesBackground span{
-    position: relative;
-    width: 20px;
-    height: 20px;
-    background: #4fc3dc;
+    width: 30px;
+    height: 30px;
+    background: #ececee;
     margin: 0 1px;
     border-radius: 100%;
-    box-shadow: 0 0 10px #4fc3dc44 ,
-                0 0 50px #4fc3dc ,
-                0 0 100px #4fc3dc,
-                0 0 200px #4fc3dc;
+    box-shadow: 0 0 0 3px #ececee44 ,
+                0 0 10px #ececee ,
+                0 0 50px #ececee,
+                0 0 100px #ececee,
+                0 0 200px #ececee,
+                0 0 300px #ececee;
     animation: move 15s linear infinite;
-    animation-duration: calc(3s/var(--i));
+    animation-duration: calc(5s/var(--i));
 }
 
 @keyframes move {
@@ -29,9 +29,9 @@
         transform: translateY(100vh) scale(0);
     }
     50%{
-        transform: translateY(50vh) scale(1);
+        transform: translateY(40vh) scale(1);
     }
     100%{
-        transform: translateY(-10vh) scale(0);
+        transform: translateY(-20vh) scale(0);
     }
 }
