--- a/src/styleComponents/footer.css
+++ b/src/styleComponents/footer.css
@@ -9,6 +9,7 @@ footer{
     padding: 0;
 }
 .under_waves{
+    padding: 20px;
     background-color: #3586ff;
     width: 100%;
     height: 40vh;
@@ -26,25 +27,25 @@ footer{
 }
 .wave#wave1{
     opacity: 1;
-    bottom: 40vh;
+    bottom: 39vh;
     z-index: 1000;
     animation: waveAnimation 4s linear infinite;
 }
 .wave#wave2{
     opacity: 0.5;
-    bottom: calc(40vh + 10px);
+    bottom: calc(39vh + 10px);
     z-index: 999;
     animation: waveAnimation2 4s linear infinite;
 }
 .wave#wave3{
     opacity: 0.2;
-    bottom: calc(40vh + 15px);
+    bottom: calc(39vh + 15px);
     z-index: 1000;
     animation: waveAnimation 3s linear infinite;
 }
 .wave#wave4{
     opacity: 0.7;
-    bottom: calc(40vh + 20px);
+    bottom: calc(39vh + 20px);
     z-index: 999;
     animation: waveAnimation2 3s linear infinite;
 }
