--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,16 +6,15 @@
 
 body{
     width: 100%;
+    max-width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 .pages{
+    background: rgb(20,20,20);
     position: relative;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
 }
