--- a/src/styleComponents/navbar.css
+++ b/src/styleComponents/navbar.css
@@ -1,17 +1,24 @@
-header{
-    z-index: 1000;
-    background-color: dimgray;
-    width: 100%;
-    height: 8vh;
-    position: sticky;
-    top: 0;
-}
 .navbar{
     width: 100%;
-    height: 100%;
+    max-width: 100vw;
+    z-index: 1000;
+    height: 8vh;
+    background-color: rgba(149,157,165,.2);
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+}
+.navbar a{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    text-align: center;
 }
 .active{
     color: red;
