--- a/src/app/stylePages/home.css
+++ b/src/app/stylePages/home.css
@@ -10,16 +10,29 @@
     object-fit: contain;
     aspect-ratio: 1/1;
     width: 30rem;
-    height: 30rem;
-    border-radius: 25%;
+    height: 40rem;
 }
-.home .container-presents{
+.home .container-descriptions{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50vh;
-    height: 50vh;
+    max-width: 50%;
+    max-height: calc(100% - 8vh);
+    padding: 40px;
     background-color: rgba(255,255,255,.8);
     border-radius: 40px;
+}
+.container-descriptions span h1{
+    display: inline-block;
+    color: white;
+}
+.container-descriptions span h1:hover{
+    color: orange;
+    animation: rubberBand 1s;
+    transition: color 2s;
+}
+.container-descriptions h1 strong{
+    color: white;
+    font-size: 60px;
 }
